[tool.poetry]
name = "with_poetry"
version = "0.1.0"
description = "Project with_poetry"
authors = ["Olga Zatulivetrova <zatulivetrova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0"
selene ="^2.0.b4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
